start of user role, made swagger home page instead of html template, added select in sqls
